# DTChat

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yaml  rules.yaml
bp-socket/: .gitignore  Makefile  README.md
bp-socket/Documentation/: TROUBLESHOOTING.md
bp-socket/bp_socket/: .clang-format  Makefile  af_bp.c  af_bp.h  bp_genl.c  bp_genl.h  bp_module.c
bp-socket/configs/: host.ionconfig  host.rc
bp-socket/daemon/: .clang-format  Makefile  bp_genl.c  bp_genl.h  bp_genl_handlers.c  bp_genl_handlers.h  daemon.c  daemon.h  ion.c  ion.h  log.h  main.c
bp-socket/include/: bp_socket.h
bp-socket/tools/: bp-demo-receiver.c  bp-demo-sender.c
bp-socket/tools/scripts/: build-and-insmod.sh
db/: contact_plan.rc  default.yaml  earth.yaml  ion.yaml  local2.yaml  local3.yaml  mars.yaml  moon.yaml  ud3dtn.yaml
scripts/aap2_bridge/: aap2_bridge.py  test_aap2_bridge.py
scripts/ion/: earth.ipn.rc  mars.ipn.rc  start_ion.sh
scripts/setup/: bootstrap.sh
src/: app.rs  main.rs  mesh_integration.rs
src/layout/: menu_bar.rs  mod.rs  ui.rs
src/layout/rooms/: message_forge.rs  message_prompt.rs  message_settings_bar.rs  mod.rs
src/layout/rooms/actions/: create_room.rs  mod.rs
src/layout/rooms/views/: message_graph.rs  message_list.rs  mod.rs
src/proto/: message.proto
src/utils/: ack.rs  colors.rs  config.rs  message.rs  mod.rs  prediction_config.rs  proto.rs  socket.rs  time.rs
